--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@ h1 {
   
     <div class="column">
     <div class="content">
-      <img src="images_projects/house price.png" alt="Mountainsd" style="width:100%">
+      <img src="images_projects/house.jpg" alt="Mountainsd" style="width:100%">
       <h3>House Price Prediction model deployed on Cloud</h3>
       <p>Go ahead and check the house price using an online deployed regression model.Model is deployed using a flask on the Heroku cloud platform. Dataset was obtained from kaggle.
 	  <br>
