--- a/certificates.html
+++ b/certificates.html
@@ -77,7 +77,7 @@ h1 {
 <h1>Manzoor Bin Mahmood</h1>
 <hr>
 
-<h2>Certificates</h2>
+<h2>Certifications</h2>
 <!--<p>Resize the browser window to see the responsive effect.</p>  -->
 
 <!-- Portfolio Gallery Grid -->
