--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,26 @@ h1 {
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
+
+<div class="column">
+    <div class="content">
+      <img src="images_projects/chatbot.png" alt="Mountainsd" style="width:100%">
+      <h3>Tourist Chatbot</h3>
+      <p>One of the important use of chatbot is as a tourist guide. It will help in providing information about an unknown city to the user. Information like important monuments in the city, famous foods, travel mode, etc. can be found easily. It is also voice enable.
+	  <br>
+	  <br>
+	  
+	  <b>Skills used: </b>Python, Web Scrapping, NLP, Voice Enabled
+	  
+	  </p>
+	  <a href="https://github.com/manzoormahmood/Tourist-Guide-Chatbot">Explore Project</a>
+    </div>
+  </div>
+  
+  
+  
+  
+  
   <div class="column">
     <div class="content">
       <img src="images_projects/1.png" alt="Mountainsd" style="width:100%">
@@ -112,7 +132,16 @@ h1 {
     </div>
   </div>
   
+  </div>
   
+  
+  
+  
+  
+  
+  
+  
+  <div class="row">
   
     <div class="column">
     <div class="content">
@@ -128,16 +157,7 @@ h1 {
     </div>
   </div>
   
-  </div>
   
-  
-  
-  
-  
-  
-  
-  
-  <div class="row">
   
   <div class="column">
     <div class="content">
@@ -175,16 +195,20 @@ h1 {
 </div>
 
 
-<!---
-<div class="content">
-  <img src="/w3images/p3.jpg" alt="Bear" style="width:100%">
-  <h3>Some Other Work</h3>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-</div>
--->
-<!-- END MAIN -->
-</div>
 
+
+
+<div class="row">
+
+
+
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
