--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@ h1 {
 <div class="column">
     <div class="content">
       <img src="images_projects/chatbot.png" alt="Mountainsd" style="width:100%">
-      <h3>Tourist Chatbot</h3>
+      <h3>Tourist Guide Chatbot</h3>
       <p>One of the important use of chatbot is as a tourist guide. It will help in providing information about an unknown city to the user. Information like important monuments in the city, famous foods, travel mode, etc. can be found easily. It is also voice enable.
 	  <br>
 	  <br>
